add more layout

--- a/index.html
+++ b/index.html
@@ -72,7 +72,35 @@
         <p>Nike P-6000</p>
     </div>
     <div class="featured">
-        
+        <div class="featured-heading">
+            <h1>Featured</h1>
+            <div class="feature-button">
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+        </div>
+        <div class="featured-display">
+            <div class="featured-item">1</div>
+            <div class="featured-item">2</div>
+            <div class="featured-item">3</div>
+            <div class="featured-item">4</div>
+            <div class="featured-item">5</div>
+            <div class="featured-item">6</div>
+            <div class="featured-item">7</div>
+        </div>
+    </div>
+    <div class="mens">
+        <div class="mens-heading">
+            <h1>mens</h1>
+        </div>
+        <div class="mens-display">
+            <div class="mens-item">1</div>
+            <div class="mens-item">2</div>
+            <div class="mens-item">3</div>
+            <div class="mens-item">4</div>
+            <div class="mens-item">5</div>
+            <div class="mens-item">6</div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
