finish but only for desktop view

--- a/index.html
+++ b/index.html
@@ -65,9 +65,15 @@
     </div>
     <div class="product-section">
         <div class="product-list">
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
+            <div class="product">
+                <img src="/assets/leftp6000.jpeg" alt="leftp6000">
+            </div>
+            <div class="product">
+                <img src="/assets/centerp6000.jpeg" alt="centerp6000">
+            </div>
+            <div class="product">
+                <img src="/assets/rightp6000.jpeg" alt="rightp6000">
+            </div>
         </div>
         <p>Nike P-6000</p>
     </div>
@@ -80,26 +86,106 @@
             </div>
         </div>
         <div class="featured-display">
-            <div class="featured-item">1</div>
-            <div class="featured-item">2</div>
-            <div class="featured-item">3</div>
-            <div class="featured-item">4</div>
-            <div class="featured-item">5</div>
-            <div class="featured-item">6</div>
-            <div class="featured-item">7</div>
+            <div class="featured-item">
+                <img src="/assets/featured1.jpeg" alt="featured1.jpeg">                
+            </div>
+            <div class="featured-item">
+                <img src="/assets/featured2.jpeg" alt="featured2.jpeg">
+            </div>
+            <div class="featured-item">
+                <img src="/assets/featured3.jpeg" alt="featured4.jpeg">
+            </div>
+            <div class="featured-item">
+                <img src="/assets/featured5.jpeg" alt="featured5.jpeg">
+            </div>
+            <div class="featured-item">
+                <img src="/assets/featured6.jpeg" alt="featured6.jpeg">
+            </div>
+            <div class="featured-item">
+                <img src="/assets/featured7.jpeg" alt="featured7.jpeg">
+            </div>
         </div>
     </div>
-    <div class="mens">
-        <div class="mens-heading">
-            <h1>mens</h1>
+    <div class="popular">
+        <div class="popular-heading">
+            <h1>Popular Right Now</h1>
         </div>
-        <div class="mens-display">
-            <div class="mens-item">1</div>
-            <div class="mens-item">2</div>
-            <div class="mens-item">3</div>
-            <div class="mens-item">4</div>
-            <div class="mens-item">5</div>
-            <div class="mens-item">6</div>
+        <div class="popular-display">
+            <div class="popular-item item1">
+                <img src="/assets/nikelogopopular.png" alt="popular">
+            </div>
+            <div class="popular-item item2">
+                <img src="/assets/popularmodel.jpeg" alt="">
+            </div>
+            <div class="popular-item item3">
+                <img src="/assets/popularmodelshirt.jpeg" alt="">
+            </div>
+            <div class="popular-item item4">
+                <img src="/assets/popularnikepant.jpeg" alt="">
+            </div>
+            <div class="popular-item item5">
+                <img src="/assets/popularnikeshoes.jpeg" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="membership">
+        <div class="membership-heading">
+            <h1>Member Benefits</h1>
+        </div>
+        <div class="membership-display">
+            <div class="membership-item">
+                <img src="/assets/membership1.jpeg" alt="">
+            </div>
+            <div class="membership-item">
+                <img src="/assets/membership3.jpeg" alt="">
+            </div>
+            <div class="membership-item">
+                <img src="/assets/membership2.jpeg" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <hr>
+        <div class="footer-display">
+            <div class="footer-display-left">
+                <ul>
+                    <li><h1>Resources</h1></li>
+                    <li><a href="#">Find A Store</a></li>
+                    <li><a href="#">Become A Member</a></li>
+                    <li><a href="#">Student Discount</a></li>
+                    <li><a href="#">Send Us Feedback</a></li>
+                </ul>
+                <ul>
+                    <li><h1>Help</h1></li>
+                    <li><a href="#">Get Help</a></li>
+                    <li><a href="#">Order Status</a></li>
+                    <li><a href="#">Delivery</a></li>
+                    <li><a href="#">Returns</a></li>
+                    <li><a href="#">Payment Options</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+                <ul>
+                    <li><h1>Company</h1></li>
+                    <li><a href="#">About Nike</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Investors</a></li>
+                    <li><a href="#">Sustainability</a></li>
+                </ul>
+            </div>
+            <div class="footer-display-right">
+                <i class="fa fa-globe"></i>
+                <h1>Malaysia</h1>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <ul>
+                <li>© Nike, Inc.All right reserved</li>
+                <li>guides</li>
+                <li>Term of Sale</li>
+                <li>Term of Use</li>
+                <li>Nike Privacy Policy</li>
+            </ul>
         </div>
     </div>
     <script src="script.js"></script>
